Complete rename to d3.compose

--- a/example/debug.html
+++ b/example/debug.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>d3.chart.multi - Debug</title>
+  <title>d3.compose - Debug</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 
-  <link rel="stylesheet" type="text/css" href="../tmp/d3.chart.multi.css">
+  <link rel="stylesheet" type="text/css" href="../tmp/d3.compose.css">
   <style>
     .container {
       margin: 40px auto 0;
@@ -48,12 +48,12 @@
   <script src="../bower_components/d3/d3.js"></script>
   <script src="../bower_components/d3.chart/d3.chart.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
-  <script src="../tmp/d3.chart.multi-all.js"></script>
+  <script src="../tmp/d3.compose-all.js"></script>
 
   <script src="../bower_components/jquery/dist/jquery.js"></script>
 
   <script type="text/javascript">
-  var chart = d3.select('#chart').chart('Multi');
+  var chart = d3.select('#chart').chart('Compose');
   var config = {charts: {}, components: {}};
   var data = {
     increasing: [
