--- a/example/index.html
+++ b/example/index.html
@@ -48,7 +48,7 @@
               y2: {domain: [0, 90]}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 bars: {
                   type: 'Bars',
@@ -116,7 +116,7 @@
               y: {data: data.lines, key: 'y'}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 line: {type: 'Lines', data: data.lines, xScale: scales.x, yScale: scales.y, labels: {type: 'HoverLabels', hoverTolerance: 50}},
               },
@@ -149,7 +149,7 @@
               y: {data: data, value: function(d, i) { return d; }}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 bars: {
                   type: 'Bars',
@@ -184,7 +184,7 @@
               y2: {domain: [0, 100]}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 stacked: {
                   type: 'StackedBars',
