--- a/example/specs.html
+++ b/example/specs.html
@@ -63,7 +63,7 @@
               y: {data: data.values, key: 'y'}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 line: {type: 'Lines', data: data.values, xScale: scales.x, yScale: scales.y, labels: true}
               },
@@ -95,7 +95,7 @@
               y: {data: data.values, key: 'y'}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 bars: {type: 'Bars', data: data.values, xScale: scales.x, yScale: scales.y},
                 line: {type: 'Lines', data: data.values, xScale: scales.x, yScale: scales.y}
@@ -123,7 +123,7 @@
               y: {domain: [-5, 5]}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 line: {
                   type: 'Lines',
@@ -159,7 +159,7 @@
               y: {domain: [20, 60]}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 line: {type: 'Lines', data: data.values, xScale: scales.x, yScale: scales.y}
               },
@@ -195,7 +195,7 @@
               y: {data: data.values, key: 'y'}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               type: 'XY',
               charts: {
                 line: {type: 'Lines', data: data.values, xScale: scales.x, yScale: scales.y}
@@ -225,7 +225,7 @@
               y: {data: data.values, key: 'y'}
             }
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 line: {type: 'Lines', data: data.values, xScale: scales.x, yScale: scales.y}
               },
@@ -271,7 +271,7 @@
               y: {data: data.values, key: 'y'}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 line: {type: 'Lines', data: data.values, xScale: scales.x, yScale: scales.y}
               },
@@ -307,7 +307,7 @@
               y: {data: data.values, key: 'y'}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 bars: {type: 'Bars', data: data.values, xScale: scales.x, yScale: scales.y},
                 line: {type: 'Lines', data: data.values, xScale: scales.x, yScale: scales.y}
@@ -337,7 +337,7 @@
               y: {data: data.values, key: 'y'}
             };
 
-            return d3.chart.xy({
+            return d3.compose.xy({
               charts: {
                 bars: {type: 'Bars', data: data.values, xScale: scales.x, yScale: scales.y},
                 line: {type: 'Lines', data: data.values, xScale: scales.x, yScale: scales.y}
