Make Title more extensible

--- a/example/index.html
+++ b/example/index.html
@@ -94,7 +94,7 @@
               legend: {
                 type: 'InsetLegend'
               },
-              title: 'Chart Title'
+              title: {text: 'Chart Title', textAlign: 'left'}
             });
           })
           .width(600)
