--- a/example/specs.html
+++ b/example/specs.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 
-  <link rel="stylesheet" type="text/css" href="../tmp/d3.compose.css">
+  <link rel="stylesheet" type="text/css" href="../_tmp/d3.compose.css">
   <style>
     .spec {
       margin-bottom: 16px;
@@ -394,7 +394,7 @@
   <script src="../bower_components/d3.chart/d3.chart.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
 
-  <script src="../tmp/d3.compose-all.js"></script>
+  <script src="../_tmp/d3.compose-all.js"></script>
 
   <script src="js/data.js"></script>
   <script type="text/javascript">
