--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 
-  <link rel="stylesheet" type="text/css" href="../tmp/d3.compose.css">
+  <link rel="stylesheet" type="text/css" href="../_tmp/d3.compose.css">
   <style>
     .example {
       margin-bottom: 16px;
@@ -27,7 +27,7 @@
   <script src="../bower_components/d3.chart/d3.chart.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
 
-  <script src="../tmp/d3.compose-all.js"></script>
+  <script src="../_tmp/d3.compose-all.js"></script>
 
   <script src="js/data.js"></script>
 </head>
@@ -154,7 +154,8 @@
                 bars: {
                   type: 'Bars',
                   data: data, xScale: scales.x, yScale: scales.y,
-                  labels: {format: d3.format(',0d')}
+                  labels: {format: d3.format(',0d')},
+                  duration: 1000
                 }
               },
               axes: {
