Update examples format

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,9 @@ title: Example
 class: example
 scripts: |
   <script type="text/javascript">examples = {};</script>
+  <script src="../js/examples/data.js"></script>
   <script src="../js/examples/line.js"></script>
+  <script src="../js/examples/line-bar-values.js"></script>
   <script src="../js/editor.js"></script>
   <script src="../js/examples.js"></script>
 ---
