--- a/examples/index.html
+++ b/examples/index.html
@@ -4,10 +4,7 @@ title: Example
 class: example
 scripts: |
   <script type="text/javascript">examples = {};</script>
-  <script src="../js/examples/data.js"></script>
-
-  <script src="../js/examples/line.js"></script>
-  <script src="../js/examples/line-bar-values.js"></script>
+  <script src="../js/examples/index.js"></script>
   
   <script src="../js/editor.js"></script>
   <script src="../js/examples.js"></script>
@@ -17,8 +14,9 @@ scripts: |
   <aside class="col-lg-2" role="complementary">
     <nav class="example-sidebar js-sidebar">
       <ul class="nav">
-        <li><a href="#/line">Line</a></li>
-        <li><a href="#/line-bar-values">Line-Bar Values</a></li>
+        <li><a href="#/lines">Lines</a></li>
+        <li><a href="#/bars">Bars</a></li>
+        <li><a href="#/lines-and-bars">Lines and Bars</a></li>
       </ul>
     </nav>
   </aside>
