Major examples refactor and simplification

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,6 +16,7 @@ scripts: |
       <ul class="nav">
         <li><a href="#/lines">Lines</a></li>
         <li><a href="#/bars">Bars</a></li>
+        <li><a href="#/horizontal-bars">Horizontal Bars</a></li>
         <li><a href="#/lines-and-bars">Lines and Bars</a></li>
       </ul>
     </nav>
