Add Horizontal Stacked Bars example

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,6 +18,7 @@ scripts: |
         <li><a href="#/bars">Bars</a></li>
         <li><a href="#/stacked-bars">Stacked Bars</a></li>
         <li><a href="#/horizontal-bars">Horizontal Bars</a></li>
+        <li><a href="#/horizontal-stacked-bars">Horizontal Stacked Bars</a></li>
         <li><a href="#/lines-and-bars">Lines and Bars</a></li>
       </ul>
     </nav>
