Initial work on landing page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,44 @@
 ---
-layout: default
+layout: full-width
 title: Getting Started
+class: home
+scripts: |
+  <script type="text/javascript">examples = {};</script>
+  <script src="js/examples/index.js"></script>
+  
+  <script src="js/editor.js"></script>
+  <script src="js/getting-started.js"></script>
 ---
 
-Getting Started...
+<section class="masthead"><div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div id="main-chart" class="editor is-constrained"></div>
+    </div>
+    <div class="col-md-5 masthead-content">
+      <h1 class="tagline">Compose complex, data-driven visualizations from reusable charts and components with d3.</h1>
+      <ul class="features">
+        <li>Get started quickly with standard charts and components</li>
+        <li>Layout charts and components automatically</li>
+        <li>Powerful foundation for creating custom charts and components</li>
+      </ul>
+      <a class="btn btn-lg call-to-action" href="{{ site.baseurl }}/docs/#downloads">Download d3.compose</a>
+    </div>
+  </div>
+</div></section>
+
+<main class="container">
+
+</main>
+
+<!-- <section class="getting-started">
+
+  <h2 id="1-lines"><span class="getting-started-number">1.</span>Lines</h2>
+  <h2 id="2-axes"><span class="getting-started-number">2.</span>Axes</h2>
+  <h2 id="2-axes"><span class="getting-started-number">3.</span>Title</h2>
+  <h2 id="2-axes"><span class="getting-started-number">4.</span>Legend</h2>
+  <h2 id="2-axes"><span class="getting-started-number">5.</span>Dots (custom chart)</h2>
+  <h2 id="2-axes"><span class="getting-started-number">6.</span>(custom component)</h2>
+  <h2 id="2-axes"><span class="getting-started-number">7.</span>Bars</h2>
+
+</section> -->
