Add chart placeholder to getting started

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,7 +11,7 @@ scripts: |
 ---
 
 <div class="row examples">
-  <aside class="col-lg-2" role="complementary">
+  <aside class="col-md-2" role="complementary">
     <nav class="example-sidebar js-sidebar">
       <ul class="nav">
         <li><a href="#/lines">Lines</a></li>
@@ -23,5 +23,5 @@ scripts: |
       </ul>
     </nav>
   </aside>
-  <section class="col-lg-10 js-editor"></section>
+  <section class="col-md-10 js-editor"></section>
 </div>
