--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: full-width
 title: Getting Started
-class: home
+class: home layout-narrow
 scripts: |
   <script type="text/javascript">examples = {};</script>
   <script src="js/examples/index.js"></script>
@@ -10,24 +10,27 @@ scripts: |
   <script src="js/getting-started.js"></script>
 ---
 
-<section class="masthead"><div class="container">
+<section class="home-masthead"><div class="container">
   <div class="row">
     <div class="col-md-6">
-      <div id="main-chart" class="editor is-constrained"></div>
+      <div id="home-chart" class="editor is-constrained">
+        <!-- Statically load empty editor to avoid load flash -->
+        {% include editor-placeholder.html width=600 height=400 %}
     </div>
-    <div class="col-md-5 masthead-content">
-      <h1 class="tagline">Compose complex, data-driven visualizations from reusable charts and components with d3.</h1>
-      <ul class="features">
+    <div class="col-md-5 home-masthead-content">
+      <h1 class="home-tagline">Compose complex, data-driven visualizations from reusable charts and components with d3.</h1>
+      <ul class="home-features">
         <li>Get started quickly with standard charts and components</li>
         <li>Layout charts and components automatically</li>
         <li>Powerful foundation for creating custom charts and components</li>
       </ul>
-      <a class="btn btn-lg call-to-action" href="{{ site.baseurl }}/docs/#downloads">Download d3.compose</a>
+      <a class="btn btn-lg home-call-to-action" href="{{ site.baseurl }}/docs/#downloads">Download d3.compose</a>
     </div>
   </div>
 </div></section>
 
-<main class="container">
+<main class="container getting-started">
+  <h2>Getting Started</h2>
 
 </main>
 
