Add custom chart and component examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,8 @@ scripts: |
         <li><a href="#/horizontal-bars">Horizontal Bars</a></li>
         <li><a href="#/horizontal-stacked-bars">Horizontal Stacked Bars</a></li>
         <li><a href="#/lines-and-bars">Lines and Bars</a></li>
+        <li><a href="#/custom-chart">Custom Chart</a></li>
+        <li><a href="#/custom-component">Custom Component</a></li>
       </ul>
     </nav>
   </aside>
