Update getting started examples

--- a/index.html
+++ b/index.html
@@ -101,11 +101,12 @@ scripts: |
   </body>
 </html>
 {% endhighlight %}
+
+        <div class="chart-container hidden-md hidden-lg">
+          {% include editor-placeholder.html width=600 height=400 hide_controls=true wrap=true %}
+        </div>
       </section>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-7">
+
       <section>
         <h3 id="2-chart"><span class="step-number">2.</span> Add Chart</h3>
 
