Add placeholders for details

--- a/index.html
+++ b/index.html
@@ -38,6 +38,35 @@ scripts: |
   </div>
 </div></section>
 
+<section class="container"><div class="row">
+  <div class="col-md-4">
+    <h3>Composable</h3>
+    <p>
+      Create focused charts/components and combine with existing charts to create complex visualizations
+    </p>
+  </div>
+  <div class="col-md-4">
+    <h3>Automatic layout</h3>
+
+    <ul>
+      <li>Layout components around/within chart</li>
+      <li>z-index</li>
+      <li>Layer-based</li>
+    </ul>
+  </div>
+  <div class="col-md-4">
+    <h3>Compare</h3>
+
+    <p>Compare d3.compose to other charting libraries:</p>
+
+    <ul>
+      <li>reusable</li>
+      <li>customizable</li>
+      <li>(can actually use other libraries within d3.compose!)</li>
+    </ul>
+  </div>
+</div></section>
+
 <!--
   Goal: Create chart at top, iteratively
 
