Update header styling

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ var chart = d3.select('#chart').chart('Compose', function(data) {
         </div>
       </section>
 
-      <section style="height: calc(25vh)"></section>
+      <section class="hidden-xs hidden-sm" style="height: calc(25vh)"></section>
     </div>
 
     <div class="col-md-5">
