--- a/index.html
+++ b/index.html
@@ -41,28 +41,33 @@ scripts: |
 <section class="container"><div class="row">
   <div class="col-md-4">
     <h3>Composable</h3>
+    <!-- TODO<div id="composable-chart"></div> -->
     <p>
-      Create focused charts/components and combine with existing charts to create complex visualizations
+      Create focused charts/components that do one thing one well (e.g. Bars, Lines, Legend, Axis, etc.) and compose them to create complex visualizations.
+    </p>
+    <p>
+      Works great with your existing charts (even those from other libraries) and it's simple to extend/customize the built-in charts and components.
     </p>
   </div>
   <div class="col-md-4">
-    <h3>Automatic layout</h3>
-
+    <h3>Automatic Layout</h3>
+    <!-- TODO<div id="layout-chart"></div> -->
+    <p>
+      When creating complex charts with D3.js and d3.chart, laying out and sizing parts of the chart are often manual processes.
+      With d3.compose, this process is automatic:
+    </p>
     <ul>
-      <li>Layout components around/within chart</li>
-      <li>z-index</li>
-      <li>Layer-based</li>
+      <li>Automatically size and position components</li>
+      <li>Layer components and charts by z-index</li>
+      <li>Responsize by default, with automatic scaling</li>
     </ul>
   </div>
   <div class="col-md-4">
-    <h3>Compare</h3>
-
-    <p>Compare d3.compose to other charting libraries:</p>
-
+    <h3>How It Compares</h3>
     <ul>
-      <li>reusable</li>
-      <li>customizable</li>
-      <li>(can actually use other libraries within d3.compose!)</li>
+      <li><b>Customizable</b>: d3.compose makes it easy to extend, layout, and refine charts/components</li>
+      <li><b>Reusable</b>: By breaking down visualizations into focused charts and components, you can quickly reconfigure and reuse your code</li>
+      <li><b>Integrated</b>: It's straightforward to use your existing charts or charts from other libraries with d3.compose to create just the chart you're looking for</li>
     </ul>
   </div>
 </div></section>
@@ -99,10 +104,16 @@ scripts: |
       </div>
 
       <section>
+        <p>We'll walk through the steps for creating this chart plotting the results and control for an experiment in the following steps. We'll start with it as a line chart and then switch to bars at then end (to see how easy that is).</p>
+
+        <div class="chart-container hidden-md hidden-lg">
+          {% include editor-placeholder.html width=600 height=400 hide_controls=true wrap=true %}
+        </div>
+
         <h3 id="1-download"><span class="step-number">1.</span> Download</h3>
 
         <p>
-          <a href="{{ site.baseurl }}/docs/#downloads">Download</a> and add d3.compose (and its dependencies: d3, d3.chart, and underscore) to your page.
+          <a href="{{ site.baseurl }}/docs/#downloads">Download</a> and add d3.compose (and its dependencies: D3.js, d3.chart, and Underscore.js) to your page.
         </p>
 
 {% highlight html %}
@@ -110,7 +121,6 @@ scripts: |
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="d3.compose.css">
-    <title>d3.compose</title>
   </head>
   <body>
     <div id="chart"></div>
@@ -122,32 +132,31 @@ scripts: |
     <script src="d3.compose-all.js"></script>
 
     <script type="text/javascript">
-      var data = [{x: 0, y: 0}, {x: 1, y: 10}, {x: 2, y: 40}, {x: 3, y: 90}];
-      var chart = d3.select('#chart').chart('Compose');
-
-      chart.draw(data);
+      <!-- Your code -->
     </script>
   </body>
 </html>
 {% endhighlight %}
-
-        <div class="chart-container hidden-md hidden-lg">
-          {% include editor-placeholder.html width=600 height=400 hide_controls=true wrap=true %}
-        </div>
       </section>
 
       <section>
         <h3 id="2-chart"><span class="step-number">2.</span> Add Chart</h3>
 
         <p>
-          Add chart...
+          First, we'll take just the results and add a line chart to visualize the data.
         </p>
 
 {% highlight js %}
-var data = [{x: 0, y: 0}, {x: 1, y: 10}, {x: 2, y: 40}, {x: 3, y: 90}];
+var data = [{x: 0, y: 0}, {x: 1, y: 10}, {x: 2, y: 40}, /* ... */];
 var chart = d3.select('#chart').chart('Compose', function(data) {
+  // Options function:
+  // Gets evaluated on each draw and takes in data and returns options
+
   return {
     charts: {
+      // Create results chart: 
+      // type: 'Lines' -> d3.chart('Lines')
+      // data: data -> pass given data to Lines chart
       results: {
         type: 'Lines',
         data: data
@@ -168,7 +177,7 @@ chart.draw(data);
         <h3 id="3-component"><span class="step-number">3.</span> Add Component</h3>
 
         <p>
-          Add component...
+          The chart isn't very meaningful without knowing what the values are, so let's add a y-axis to the chart.
         </p>
 
 {% highlight js %}
@@ -178,10 +187,14 @@ var chart = d3.select('#chart').chart('Compose', function(data) {
       results: {type: 'Lines', data: data}
     },
     components: {
+      // Create yAxis component:
+      // type: 'Axis' -> d3.chart('Axis')
+      // position: 'left' -> position to the left of the charts
+      // scale: ... -> set scale property on axis
       yAxis: {
         type: 'Axis',
         position: 'left',
-        scale: {domain: [0, 90]}
+        scale: {domain: [0, 100]}
       }
     }
   };
@@ -197,14 +210,18 @@ var chart = d3.select('#chart').chart('Compose', function(data) {
         <h3 id="4-scales"><span class="step-number">4.</span> Add Scales</h3>
 
         <p>
-          Add scales...
+          In the previous step, the y-axis domain coincidentally matched the line chart's scale, but if the line chart's scale needed to be changed (e.g. to given more room at the top of the chart),
+          a scale can be created that is shared between components and charts. Additionally, scales can be created with the domain automatically set from the given data.
+          Next, let's add an x-axis and change the scale for the y-axis.
         </p>
 
 {% highlight js %}
 var chart = d3.select('#chart').chart('Compose', function(data) {
+  // Scales are created as simple objects (that are later converted into d3.scale)
   var scales = {
-    x: {data: data, key: 'x'}
-    y: {domain: [0, 100]}
+    // Automatically determine x-scale domain from the data
+    x: {data: data, key: 'x'},
+    y: {domain: [0, 120]}
   };
 
   return {
@@ -236,16 +253,23 @@ var chart = d3.select('#chart').chart('Compose', function(data) {
         <h3 id="5-series"><span class="step-number">5.</span> Add Series</h3>
 
         <p>
-          Add series...
+          With the chart taking shape, let's add another data series: the control results.
+          All of the standard charts handle both single or series data by default and there are helpers and mixins to add series functionality to your custom charts/components.
         </p>
 
 {% highlight js %}
 var data = [
   {
-    values: [{x: 0, y: 0}, {x: 1, y: 10}, {x: 2, y: 40}, {x: 3, y: 90}]
+    // required: values: [...]
+    // optional: key, name
+    key: 'results',
+    name: 'Results', // (used in legend later)
+    values: [{x: 0, y: 0}, {x: 1, y: 10}, {x: 2, y: 40}, /* ... */]
   },
   {
-    values: [{x: 0, y: 0}, {x: 1, y: 10}, {x: 2, y: 40}, {x: 3, y: 90}]
+    key: 'control',
+    name: 'Control',
+    values: [/* ... */]
   }
 ];
 var chart = d3.select('#chart').chart('Compose', function(data) {
@@ -264,7 +288,9 @@ chart.draw(data);
         <h3 id="6-legend"><span class="step-number">6.</span> Add Legend</h3>
 
         <p>
-          Add legend...
+          Now that there are multiple series, let's add a legend.
+          The legend component can take in a <code>data</code> property to manually create values,
+          or it can automatically load series information from each chart passed to <code>charts</code> (by key).
         </p>
 
 {% highlight js %}
@@ -279,16 +305,13 @@ var chart = d3.select('#chart').chart('Compose', function(data) {
       results: {type: 'Lines', data: data, xScale: scales.x, yScale: scales.y}
     },
     components: {
-      xAxis: {
-        type: 'Axis',
-        position: 'bottom',
-        scale: scales.x
-      },
-      yAxis: {
-        type: 'Axis',
-        position: 'left',
-        scale: scales.y
-      },
+      xAxis: {type: 'Axis', position: 'bottom', scale: scales.x},
+      yAxis: {type: 'Axis', position: 'left', scale: scales.y},
+
+      // Create legend component
+      // type: 'Legend' -> d3.chart('Legend')
+      // position: 'right' -> position to the right of the chart
+      // charts: ['results'] -> generate legend from the 'results' chart
       legend: {
         type: 'Legend',
         position: 'right',
@@ -305,10 +328,10 @@ var chart = d3.select('#chart').chart('Compose', function(data) {
       </section>
 
       <section>
-        <h3 id="7-title"><span class="step-number">7.</span> Add Title</h3>
+        <h3 id="7-title"><span class="step-number">7.</span> Add Titles</h3>
 
         <p>
-          Add Title
+          Finally, let's add titles to the chart and axes.
         </p>
 
 {% highlight js %}
@@ -323,25 +346,23 @@ var chart = d3.select('#chart').chart('Compose', function(data) {
       results: {type: 'Lines', data: data, xScale: scales.x, yScale: scales.y}
     },
     components: {
-      xAxis: {
-        type: 'Axis',
-        position: 'bottom',
-        scale: scales.x
-      },
-      yAxis: {
-        type: 'Axis',
-        position: 'left',
-        scale: scales.y
-      },
-      legend: {
-        type: 'Legend',
-        position: 'right',
-        charts: ['results']
-      },
+      xAxis: {type: 'Axis', position: 'bottom', scale: scales.x},
+      yAxis: {type: 'Axis', position: 'left', scale: scales.y},
+      legend: {type: 'Legend', position: 'right', charts: ['results']},
       title: {
         type: 'Title',
         text: 'd3.compose',
         'class': 'chart-title-main'
+      },
+      xAxisTitle: {
+        type: 'Title', 
+        position: 'bottom', 
+        text: 'Experiment #'
+      },
+      yAxisTitle: {
+        type: 'Title', 
+        position: 'left', 
+        text: 'Result (units)'
       }
     }
   };
@@ -357,21 +378,24 @@ var chart = d3.select('#chart').chart('Compose', function(data) {
         <h3 id="8-bars"><span class="step-number">8.</span> Switch to Bars</h3>
 
         <p>
-          Switch to Bars...
+          Your colleagues decide they want to see what the chart would look like with bars instead of lines (a potentially major change without d3.compose).
+          Just two things need to change: switch 'Lines' to 'Bars' and the x-scale needs to use an ordinal scale.
         </p>
 
 {% highlight js %}
 var chart = d3.select('#chart').chart('Compose', function(data) {
   var scales = {
+    // Use d3.scale.ordinal(...)
+    // and place series next to each other (adjacent)
     x: {data: data, key: 'x', type: 'ordinal', adjacent: true}
-    y: {domain: [0, 100]}
+    // ...
   };
 
   return {
     charts: {
-      results: {type: 'Bars', data: data, xScale: scales.x, yScale: scales.y}
+      results: {type: 'Bars', /* ... */}
     },
-    // Everything stays the same...
+    // Everything else stays the same...
   };
 });
 {% endhighlight %}
@@ -381,7 +405,7 @@ var chart = d3.select('#chart').chart('Compose', function(data) {
         </div>
       </section>
 
-      <section class="hidden-xs hidden-sm" style="height: calc(25vh)"></section>
+      <section class="hidden-xs hidden-sm" style="height: 1000px; height: calc(100vh - 500px)"></section>
     </div>
 
     <div class="col-md-5">
