Getting started tweaks

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ scripts: |
   </div>
 </div></section>
 
-<section class="container"><div class="row">
+<section class="container home-details"><div class="row">
   <div class="col-md-4">
     <h3>Composable</h3>
     <!-- TODO<div id="composable-chart"></div> -->
@@ -63,7 +63,7 @@ scripts: |
     </ul>
   </div>
   <div class="col-md-4">
-    <h3>How It Compares</h3>
+    <h3>Why d3.compose?</h3>
     <ul>
       <li><b>Customizable</b>: d3.compose makes it easy to extend, layout, and refine charts/components</li>
       <li><b>Reusable</b>: By breaking down visualizations into focused charts and components, you can quickly reconfigure and reuse your code</li>
